--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
   </head>
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Patrick Fain</a>
+      <a class="navbar-brand" href="index.html">Patrick Fain</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -20,13 +22,13 @@
         <span class="navbar-text mr-auto"></span>
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Portfolio</a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
-           <a class="nav-link" href="#">Contact</a>
+           <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -34,28 +36,57 @@
     </nav>
 
     <main class="container">
-      <div class="row">
-        <div class="col-3">
-          <img class="img-thumbnail" src="http://lorempixel.com/400/400" alt="Placeholder">
-          </div>
-      
-        <div class="col-6">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      <div class="row">      
+        <div class="col-8">
+          <div>
+          <img class="img-fluid profilepic" src="images/profilepic.png" alt="Placeholder">
         </div>
-        <div class="col-3">
-          <div class="card" style="width: 20rem;">
+          <p>
+            I am 30 years old, and a graduate of UNCC's Mechanical Engineering Technology. I started my collegiate journey in 2005, and took a 6 year break, 4 of which I spent in the United States Marine Corps as an Infantry Marine (2 tours to Afghanistan). After leaving the Corps I went back to UNCC to finish my degree, finishing in 2016. My first introduction to coding came in my senior year, during my Instrumentation and Controls class, where I began messing around with Arduino (Micro-controllers coded written in C) and PLC controllers and Relay Ladder Logic (RsLogix 5000 by rockwell automation). I currently work for Schneider Electric in their BAS group (Building Automation Systems) creating user interfaces and some programming for HVAC and Lighting Control.
+          </p>
+          <br>
+          <p>
+            I am excited to dive deeper into the wonderful world of programming. 
+          </p>
+        </div>
+
+        <div class=" col-4">
+          <div class="card">
             <div class="card-body">
-              <h4 class="card-title">Contact Me</h4>
-              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <div class="row">
+                <h4 class="card-title">Contact Me</h4>
+              </div>
+              <div class="row">
+                <div class="col-4">
+                  <a  href="https://github.com/fain704" target="_blank">
+                    <img class="img-fluid" src="images/github.png" alt="github link">    
+                  </a>
+                </div>
+                <div class="col-4">
+                  <a href="https://www.linkedin.com/in/patrick-fain-ab3752b1/" target="_blank">
+                    <img class="img-fluid" src="images/linkedin.png" alt="linkedin link">    
+                  </a>
+                </div>
+                <div class="col-4">
+                  <a href="https://stackexchange.com/users/11488063/patrick-fain" target="_blank">
+                    <img class="img-fluid" src="images/overstack.png" alt="overstack link">    
+                  </a>
+                </div>
+                </div>
             </div>
           </div>
         </div>
     </main>
 
-
+    <footer class="footer fixed-bottom">
+      <div class="row">
+        <div class="col-12">
+          <figure class="text-muted bg-light" align="center">
+            &copy Copyright 2017 Patrick Fain
+          </figure>
+        </div>
+      </div>
+    </footer>
 
 
 
