fixed card width, footer, added xs/sm/md/lg col widths

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <main class="container">
       <div class="row">      
-        <div class="col-8">
+        <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 material">
           <div>
           <img class="img-fluid profilepic" src="images/profilepic.png" alt="Placeholder">
         </div>
@@ -50,8 +50,8 @@
           </p>
         </div>
 
-        <div class=" col-4">
-          <div class="card">
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+          <div class="card" style="width: 100%;">
             <div class="card-body">
               <div class="row">
                 <h4 class="card-title">Contact Me</h4>
@@ -81,7 +81,7 @@
     <footer class="footer fixed-bottom">
       <div class="row">
         <div class="col-12">
-          <figure class="text-muted bg-light" align="center">
+          <figure class="text-muted" align="center">
             &copy Copyright 2017 Patrick Fain
           </figure>
         </div>
