--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 
     <main class="container">
       <div class="row">
-        <div class="col-8">
+        <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 material">
           <form>
             <div class="form-group">
               <label class="form-control-label" for="formGroupExampleInput2">Name</label>
@@ -56,8 +56,8 @@
           </form>
 
         </div>
-        <div class="col-4">
-          <div class="card" style="width: 20rem;">
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+          <div class="card" style="width: 100%;">
               <div class="card-body">
                 <div class="row">
                   <h4 class="card-title">Contact Me</h4>
@@ -92,7 +92,7 @@
     <footer class="footer fixed-bottom">
       <div class="row">
         <div class="col-12">
-          <figure class="text-muted bg-light" align="center">
+          <figure class="text-muted " align="center">
             &copy Copyright 2017 Patrick Fain
           </figure>
         </div>
