--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
 
     <main class="container">
         <div class="row">
-          <div class="col-8">
+          <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 material">
             <div class="row">
               <div class="col-6">
                   <a href="#">
@@ -77,8 +77,8 @@
             </div>
           </div>
 
-          <div class=" col-4">
-            <div class="card" style="width: 20rem;">
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="card" style="width: 100%;">
               <div class="card-body">
                 <div class="row">
                   <h4 class="card-title">Contact Me</h4>
@@ -107,15 +107,15 @@
 
     </main>
 
-    <footer class="footer fixed-bottom">
+    <div class="footer fixed-bottom">
       <div class="row">
         <div class="col-12">
-          <figure class="text-muted bg-light" align="center">
+          <figure class="text-muted" align="center">
             &copy Copyright 2017 Patrick Fain
           </figure>
         </div>
       </div>
-    </footer>
+    </div>
 
 
 
