--- a/portfolio.html
+++ b/portfolio.html
@@ -55,13 +55,13 @@
               <div class="col-6">
                   <a href="#">
                     <img class="img-fluid game" src="http://lorempixel.com/400/400" alt="hangman">
-                    <button class="btn btn-primary btn-block">Hangman Game</button>
+                    <button class="btn btn-primary btn-block">Trivia Game</button>
                   </a>
               </div>
               <div class="col-6">
                   <a href="#">
                     <img class="img-fluid game" src="http://lorempixel.com/400/400" alt="RPG Game">
-                    <button class="btn btn-primary btn-block">RPG Game</button>
+                    <button class="btn btn-primary btn-block">Info Widget</button>
                   </a>
               </div>
             </div>
@@ -69,7 +69,7 @@
               <div class="col-6">
                   <a href="#">
                     <img class="img-fluid game" src="http://lorempixel.com/400/400" alt="hangman">
-                    <button class="btn btn-primary btn-block">Trivia Game</button>
+                    <button class="btn btn-primary btn-block">Rock Paper Scissors</button>
                   </a>
               </div>
               <div class="col-6">
