--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
                   </a>
               </div>
               <div class="col-6">
-                  <a href="#">
+                  <a href="RPS/RPS.html">
                     <img class="img-fluid game" src="http://lorempixel.com/400/400" alt="RPG Game">
                     <button class="btn btn-primary btn-block">RPG Game</button>
                   </a>
