fixed copyright symbol

--- a/index.html
+++ b/index.html
@@ -37,42 +37,43 @@
 
     <main class="container">
       <div class="row">      
-        <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 material">
-          <div>
-          <img class="img-fluid profilepic" src="images/profilepic.png" alt="Placeholder">
-        </div>
-          <p>
-            I am 30 years old, and a graduate of UNCC's Mechanical Engineering Technology. I started my collegiate journey in 2005, and took a 6 year break, 4 of which I spent in the United States Marine Corps as an Infantry Marine (2 tours to Afghanistan). After leaving the Corps I went back to UNCC to finish my degree, finishing in 2016. My first introduction to coding came in my senior year, during my Instrumentation and Controls class, where I began messing around with Arduino (Micro-controllers coded written in C) and PLC controllers and Relay Ladder Logic (RsLogix 5000 by rockwell automation). I currently work for Schneider Electric in their BAS group (Building Automation Systems) creating user interfaces and some programming for HVAC and Lighting Control.
-          </p>
-          <br>
-          <p>
-            I am excited to dive deeper into the wonderful world of programming. 
-          </p>
-        </div>
+          <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 material">
+            <div>
+            <img class="img-fluid profilepic" src="images/profilepic.png" alt="Placeholder">
+          </div>
+            <p>
+              I am 30 years old, and a graduate of UNCC's Mechanical Engineering Technology. I started my collegiate journey in 2005, and took a 6 year break, 4 of which I spent in the United States Marine Corps as an Infantry Marine (2 tours to Afghanistan). After leaving the Corps I went back to UNCC to finish my degree, finishing in 2016. My first introduction to coding came in my senior year, during my Instrumentation and Controls class, where I began messing around with Arduino (Micro-controllers coded written in C) and PLC controllers and Relay Ladder Logic (RsLogix 5000 by rockwell automation). I currently work for Schneider Electric in their BAS group (Building Automation Systems) creating user interfaces and some programming for HVAC and Lighting Control.
+            </p>
+            <br>
+            <p>
+              I am excited to dive deeper into the wonderful world of programming. 
+            </p>
+          </div>
 
-        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-          <div class="card" style="width: 100%;">
-            <div class="card-body">
-              <div class="row">
-                <h4 class="card-title">Contact Me</h4>
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="card" style="width: 100%;">
+              <div class="card-body">
+                <div class="row">
+                  <h4 class="card-title">Contact Me</h4>
+                </div>
+                <div class="row">
+                  <div class="col-4">
+                    <a  href="https://github.com/fain704" target="_blank">
+                      <img class="img-fluid" src="images/github.png" alt="github link">    
+                    </a>
+                  </div>
+                  <div class="col-4">
+                    <a href="https://www.linkedin.com/in/patrick-fain-ab3752b1/" target="_blank">
+                      <img class="img-fluid" src="images/linkedin.png" alt="linkedin link">    
+                    </a>
+                  </div>
+                  <div class="col-4">
+                    <a href="https://stackexchange.com/users/11488063/patrick-fain" target="_blank">
+                      <img class="img-fluid" src="images/overstack.png" alt="overstack link">    
+                    </a>
+                  </div>
+                  </div>
               </div>
-              <div class="row">
-                <div class="col-4">
-                  <a  href="https://github.com/fain704" target="_blank">
-                    <img class="img-fluid" src="images/github.png" alt="github link">    
-                  </a>
-                </div>
-                <div class="col-4">
-                  <a href="https://www.linkedin.com/in/patrick-fain-ab3752b1/" target="_blank">
-                    <img class="img-fluid" src="images/linkedin.png" alt="linkedin link">    
-                  </a>
-                </div>
-                <div class="col-4">
-                  <a href="https://stackexchange.com/users/11488063/patrick-fain" target="_blank">
-                    <img class="img-fluid" src="images/overstack.png" alt="overstack link">    
-                  </a>
-                </div>
-                </div>
             </div>
           </div>
         </div>
@@ -82,7 +83,7 @@
       <div class="row">
         <div class="col-12">
           <figure class="text-muted" align="center">
-            &copy Copyright 2017 Patrick Fain
+            &copy; Copyright 2017 Patrick Fain
           </figure>
         </div>
       </div>
