--- a/portfolio.html
+++ b/portfolio.html
@@ -111,7 +111,7 @@
       <div class="row">
         <div class="col-12">
           <figure class="text-muted" align="center">
-            &copy Copyright 2017 Patrick Fain
+            &copy; Copyright 2017 Patrick Fain
           </figure>
         </div>
       </div>
